// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render correctly 1`] = `
.c0 {
  fill: #545456;
  width: 2.75rem;
  height: 2.75rem;
  cursor: default;
}

.c0:hover {
  fill: #545456;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={false}
    size="2.75rem"
  >
    <Styled(bitcoin)
      selectable="0"
      size="2.75rem"
    >
      <bitcoin
        className="c0"
        height="32"
        selectable="0"
        size="2.75rem"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="c0"
          height="32"
          selectable="0"
          size="2.75rem"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            bitcoin
          </title>
          <path
            d="M20.184 14.8c3.616 1.672 4.656 4.696 4.144 7.28-.872 4.464-4.304 5.816-8.504 5.76v3.2c0 .352 0 .992-.712.992s-.592-.672-.592-.992v-3.168h-2.088v3.136c0 .408 0 .992-.624.992s-.688-.616-.688-.992v-2.192-1.008h-2.4c-.856 0-1.168-.296-1.168-1.12v-21.4c0-.8.312-1.096 1.096-1.112s1.648 0 2.48 0V1.304c0-.28 0-1.288.656-1.288s.616 1 .616 1.288v2.88h2.088V1.128c0-.592 0-1.12.592-1.12s.712.48.712 1.112v3.064c3.128 0 5.376 1.08 6.4 3.912.912 2.624.056 4.832-2.008 6.704zM8.856 15.832v10.68h7.12l.2.001c.815 0 1.618-.056 2.404-.163l-.091.01c2.592-.477 4.548-2.661 4.672-5.323v-.013c0-2.512-2.16-5.136-4.72-5.136-2.976-.008-6.488-.056-9.584-.056zm0-1.288c2.704 0 5.776.048 8.4 0l.088.001c.807 0 1.548-.278 2.135-.743l-.007.005a4.677 4.677 0 0 0 1.59-5.145l.009.033c-.609-1.871-2.337-3.2-4.376-3.2H8.799z"
          />
        </svg>
      </bitcoin>
    </Styled(bitcoin)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon should render correctly with name 1`] = `
.c0 {
  fill: #545456;
  width: 2.75rem;
  height: 2.75rem;
  cursor: default;
}

.c0:hover {
  fill: #545456;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="ethereum"
    selectable={false}
    size="2.75rem"
  >
    <Styled(ethereum)
      selectable="0"
      size="2.75rem"
    >
      <ethereum
        className="c0"
        height="32"
        selectable="0"
        size="2.75rem"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="c0"
          height="32"
          selectable="0"
          size="2.75rem"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            ethereum
          </title>
          <path
            d="M6 18.144a1.586 1.586 0 0 1-.189-1.355l-.003.011C9.168 11.2 12.592 5.64 16 .08c3.408 5.56 6.832 11.12 10.192 16.72a1.596 1.596 0 0 1-.188 1.374l.004-.006C22.704 22.784 19.344 27.384 16 32c-3.344-4.616-6.696-9.216-10-13.856zm9.6 3.312V3.296C12.544 8.28 10.48 12 7.552 16.8c3 1.768 5.04 2.928 8.024 4.656zm8.8-4.52c-2.976-4.888-4.616-8.648-7.664-13.648V21.6c2.968-1.752 4.592-2.912 7.624-4.664zm-9.504 6.096c-2.544-1.512-4.496-2.712-7.096-4.2 2.64 3.64 4.944 6.456 7.608 10.144 0-1.84.072-3.2 0-5.072a1.247 1.247 0 0 0-.508-.869l-.004-.003zm1.904 5.96c2.544-3.528 4.8-6.76 7.376-10.352-.312.208-4.656 3.112-7.04 4.552a1.18 1.18 0 0 0-.32.884v-.003c-.064 1.968-.016 2.952-.016 4.92z"
          />
        </svg>
      </ethereum>
    </Styled(ethereum)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon should render correctly with selectable 1`] = `
.c0 {
  fill: #545456;
  width: 2.75rem;
  height: 2.75rem;
  cursor: pointer;
}

.c0:hover {
  fill: #757679;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={true}
    size="2.75rem"
  >
    <Styled(bitcoin)
      selectable="1"
      size="2.75rem"
    >
      <bitcoin
        className="c0"
        height="32"
        selectable="1"
        size="2.75rem"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="c0"
          height="32"
          selectable="1"
          size="2.75rem"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            bitcoin
          </title>
          <path
            d="M20.184 14.8c3.616 1.672 4.656 4.696 4.144 7.28-.872 4.464-4.304 5.816-8.504 5.76v3.2c0 .352 0 .992-.712.992s-.592-.672-.592-.992v-3.168h-2.088v3.136c0 .408 0 .992-.624.992s-.688-.616-.688-.992v-2.192-1.008h-2.4c-.856 0-1.168-.296-1.168-1.12v-21.4c0-.8.312-1.096 1.096-1.112s1.648 0 2.48 0V1.304c0-.28 0-1.288.656-1.288s.616 1 .616 1.288v2.88h2.088V1.128c0-.592 0-1.12.592-1.12s.712.48.712 1.112v3.064c3.128 0 5.376 1.08 6.4 3.912.912 2.624.056 4.832-2.008 6.704zM8.856 15.832v10.68h7.12l.2.001c.815 0 1.618-.056 2.404-.163l-.091.01c2.592-.477 4.548-2.661 4.672-5.323v-.013c0-2.512-2.16-5.136-4.72-5.136-2.976-.008-6.488-.056-9.584-.056zm0-1.288c2.704 0 5.776.048 8.4 0l.088.001c.807 0 1.548-.278 2.135-.743l-.007.005a4.677 4.677 0 0 0 1.59-5.145l.009.033c-.609-1.871-2.337-3.2-4.376-3.2H8.799z"
          />
        </svg>
      </bitcoin>
    </Styled(bitcoin)>
  </Icon>
</ThemeProvider>
`;

exports[`Icon should render correctly with size 1`] = `
.c0 {
  fill: #545456;
  width: 72px;
  height: 72px;
  cursor: default;
}

.c0:hover {
  fill: #545456;
}

<ThemeProvider
  theme={
    Object {
      "buttonBackgroundColor": "#004A7C",
      "buttonColor": "#FFF",
      "buttonHoverColor": "#0068af",
      "cartridgeBackgroundColor": "#004A7C",
      "cartridgeColor": "#FFF",
      "circleBadgeBackgroundColor": "#CCC",
      "circleBadgeHoverColor": "#004A7C",
      "dropdownBackgroundColor": "rgba(0, 0, 0, 0)",
      "dropdownColor": "#545456",
      "fontPrimary": "'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;",
      "iconColor": "#545456",
      "iconHoverColor": "#757679",
      "inputBackgroundColor": "#FFF",
      "inputBorderColor": "#CCC",
      "inputColor": "#545456",
      "inputPlaceholderColor": "#999B9E",
      "linkColor": "#545456",
      "linkHoverColor": "#004A7C",
      "navbarDropdownContentBackgroundColor": "#FFF",
      "navbarDropdownContentShadowColor": "#545456",
      "navbarDropdownHeaderColor": "#FFF",
      "navbarMenuBagroundColor": "#004A7C",
      "navbarTogglerColor": "#FFF",
      "paginationBackgroundColor": "rgba(0, 0, 0, 0)",
      "paginationBorderColor": "#EEF2F5",
      "paginationColor": "#383838",
      "paginationHoverBackgroundColor": "rgba(16,173,228,0.1)",
      "paginationHoverColor": "#383838",
      "paginationSelectedBackgroundColor": "#10ADE4",
      "paginationSelectedColor": "#FFF",
      "palette": Object {
        "azure": "#3558A8",
        "bigStone": "#152343",
        "biscay": "#153A62",
        "black": "#000",
        "blackAlpha05": "rgba(0,0,0,0.05)",
        "blackAlpha75": "rgba(0,0,0,0.75)",
        "blueWood": "#27324B",
        "cerulean": "#10ADE4",
        "ceruleanAlpha10": "rgba(16,173,228,0.1)",
        "gold": "#FFCA00",
        "gray0": "#F8F8F8",
        "gray1": "#EEF2F5",
        "gray2": "#CCC",
        "gray3": "#999B9E",
        "gray4": "#757679",
        "gray5": "#545456",
        "gray6": "#383838",
        "gray7": "#040d25",
        "orient": "#004A7C",
        "powderBlue": "#B2D5E5",
        "transparent": "rgba(0, 0, 0, 0)",
        "white": "#FFF",
        "whiteAlpha10": "rgba(255,255,255,0.1)",
        "whiteAlpha75": "rgba(255,255,255,0.75)",
      },
      "panelBackgroundColor": "#FFF",
      "panelShadowColor": "#EEF2F5",
      "searchBarIconBackgroundColor": "#FFCA00",
      "searchBarInputBackgroundColor": "#FFF",
      "searchBarUnderlinedBackgroundColor": "rgba(0, 0, 0, 0)",
      "searchBarUnderlinedBorderColor": "#CCC",
      "sectionBackgroundColor": "rgba(0, 0, 0, 0)",
      "tabMenuBarColor": "#FFCA00",
      "tabMenuBorderColor": "#EEF2F5",
      "tableCellEvenBackgroundColor": "#F8F8F8",
      "tableCellOddBackgroundColor": "#FFF",
      "tableShadowColor": "#EEF2F5",
      "textColor": "#545456",
    }
  }
>
  <Icon
    name="bitcoin"
    selectable={false}
    size="72px"
  >
    <Styled(bitcoin)
      selectable="0"
      size="72px"
    >
      <bitcoin
        className="c0"
        height="32"
        selectable="0"
        size="72px"
        viewBox="0 0 32 32"
        width="32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <svg
          className="c0"
          height="32"
          selectable="0"
          size="72px"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            bitcoin
          </title>
          <path
            d="M20.184 14.8c3.616 1.672 4.656 4.696 4.144 7.28-.872 4.464-4.304 5.816-8.504 5.76v3.2c0 .352 0 .992-.712.992s-.592-.672-.592-.992v-3.168h-2.088v3.136c0 .408 0 .992-.624.992s-.688-.616-.688-.992v-2.192-1.008h-2.4c-.856 0-1.168-.296-1.168-1.12v-21.4c0-.8.312-1.096 1.096-1.112s1.648 0 2.48 0V1.304c0-.28 0-1.288.656-1.288s.616 1 .616 1.288v2.88h2.088V1.128c0-.592 0-1.12.592-1.12s.712.48.712 1.112v3.064c3.128 0 5.376 1.08 6.4 3.912.912 2.624.056 4.832-2.008 6.704zM8.856 15.832v10.68h7.12l.2.001c.815 0 1.618-.056 2.404-.163l-.091.01c2.592-.477 4.548-2.661 4.672-5.323v-.013c0-2.512-2.16-5.136-4.72-5.136-2.976-.008-6.488-.056-9.584-.056zm0-1.288c2.704 0 5.776.048 8.4 0l.088.001c.807 0 1.548-.278 2.135-.743l-.007.005a4.677 4.677 0 0 0 1.59-5.145l.009.033c-.609-1.871-2.337-3.2-4.376-3.2H8.799z"
          />
        </svg>
      </bitcoin>
    </Styled(bitcoin)>
  </Icon>
</ThemeProvider>
`;
